<resources>
    <string name="app_name">TP2_Android_WFE</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_existencia">Existencia</string>
    <string name="btn_guardar">Guardar</string>
    <string name="hint_email">Email</string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="hint_codigo">Codigo</string>
    <string name="hint_ruc">Ruc</string>
</resources>