<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerProducto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_codigo" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewCodigo"
            android:inputType="number"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewNombre"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_precio" />

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewPrecio"
            android:inputType="number"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewExistencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_existencia" />

        <EditText
            android:id="@+id/txtExistencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewExistencia"
            android:inputType="number"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>