<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerCliente"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewRuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_ruc" />

        <EditText
            android:id="@+id/txtRuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewRuc"
            android:inputType="number"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewNombre"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewEmail"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>